k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeserver
  labels:
    app: nodeserver
spec:
  selector:
    matchLabels:
      app: nodeserver
  replicas: 2
  template:
    metadata:
      labels:
        app: nodeserver
    spec:
      containers:
        - name: nodeserver
          image: 'ocnascimento/poc_websocket:v1.0.0'

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            periodSeconds: 3
            failureThreshold: 30

          livenessProbe:
            httpGet:
              path: /healthz'
              port: 3000
            periodSeconds: 30
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
