k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeserver-service
spec:
  selector:
    app: nodeserver
  type: LoadBalancer
  ports:
    - name: nodeserver-service
      port: 3000
      targetPort: 3000
      protocol: TCP
